rust/zypp-agama/zypp-agama-sys/c-layer/include/lib.h


struct Status {
  enum STATE {
    STATE_SUCCEED,
    STATE_FAILED,
  } state;
  char *error; 
};
void free_status(struct Status *s) noexcept;
struct Zypp;
typedef void (*ProgressCallback)(const char *text, unsigned stage,
                                 unsigned total, void *user_data);
struct Zypp *init_target(const char *root, struct Status *status,
                         ProgressCallback progress, void *user_data) noexcept;
void switch_target(struct Zypp *zypp, const char *root,
                   struct Status *status) noexcept;
bool commit(struct Zypp *zypp, struct Status *status,
            struct DownloadResolvableCallbacks *download_callbacks,
            struct SecurityCallbacks *security_callbacks,
            struct InstallCallbacks *install_callbacks) noexcept;
struct MountPoint {
  const char *directory;  
  const char *filesystem; 
  bool grow_only;
  long long
      used_size; 
};
void get_space_usage(struct Zypp *zypp, struct Status *status,
                     struct MountPoint *mount_points,
                     unsigned mount_points_size) noexcept;
enum RESOLVABLE_KIND {
  RESOLVABLE_PRODUCT,
  RESOLVABLE_PATCH,
  RESOLVABLE_PACKAGE,
  RESOLVABLE_SRCPACKAGE,
  RESOLVABLE_PATTERN,
};
enum RESOLVABLE_SELECTED {
  NOT_SELECTED,
  SOLVER_SELECTED,
  APPLICATION_SELECTED,
  USER_SELECTED,
  USER_REMOVED
};
void resolvable_select(struct Zypp *zypp, const char *name,
                       enum RESOLVABLE_KIND kind, enum RESOLVABLE_SELECTED who,
                       struct Status *status) noexcept;
void resolvable_unselect(struct Zypp *zypp, const char *name,
                         enum RESOLVABLE_KIND kind,
                         enum RESOLVABLE_SELECTED who,
                         struct Status *status) noexcept;
void resolvable_reset_all(struct Zypp *_zypp) noexcept;
unsigned packages_to_install(struct Zypp *_zypp) noexcept;
struct Pattern {
  const char *name;        
  const char *category;    
  const char *icon;        
  const char *description; 
  const char *summary;     
  const char *order;       
  const char *repo_alias;  
  enum RESOLVABLE_SELECTED selected;
};
struct Patterns {
  struct Pattern *list; 
  unsigned size;
};
struct Patterns get_patterns(struct Zypp *_zypp,
                             struct Status *status) noexcept;
void free_patterns(const struct Patterns *patterns) noexcept;
void import_gpg_key(struct Zypp *zypp, const char *const pathname,
                    struct Status *status) noexcept;
bool is_local_url(const char *url, struct Status *status) noexcept;
bool is_package_available(struct Zypp *zypp, const char *tag,
                          struct Status *status) noexcept;
bool is_package_selected(struct Zypp *zypp, const char *tag,
                         struct Status *status) noexcept;
bool run_solver(struct Zypp *zypp, bool only_required,
                struct Status *status) noexcept;
void free_zypp(struct Zypp *zypp) noexcept;