rust/zypp-agama/zypp-agama-sys/c-layer/include/repository.h

struct Repository {
  bool enabled;      
  char *url;         
  char *alias;       
  char *userName;    
  char *serviceName; 
};
struct RepositoryList {
  const unsigned size;
  struct Repository *repos; 
};
struct RepositoryList list_repositories(struct Zypp *zypp,
                                        struct Status *status) noexcept;
void free_repository_list(struct RepositoryList *repo_list) noexcept;
void add_repository(struct Zypp *zypp, const char *alias, const char *url,
                    struct Status *status, ZyppProgressCallback callback,
                    void *user_data) noexcept;
void disable_repository(struct Zypp *zypp, const char *alias,
                        struct Status *status) noexcept;
void set_repository_url(struct Zypp *zypp, const char *alias, const char *url,
                        struct Status *status) noexcept;
void remove_repository(struct Zypp *zypp, const char *alias,
                       struct Status *status, ZyppProgressCallback callback,
                       void *user_data) noexcept;
void add_service(struct Zypp *zypp, const char *alias, const char *url,
                 struct Status *status) noexcept;
void refresh_repository(struct Zypp *zypp, const char *alias,
                        struct Status *status,
                        struct DownloadProgressCallbacks *progress,
                        struct SecurityCallbacks *security) noexcept;
void refresh_service(struct Zypp *zypp, const char *alias,
                     struct Status *status) noexcept;
void build_repository_cache(struct Zypp *zypp, const char *alias,
                            struct Status *status,
                            ZyppProgressCallback callback,
                            void *user_data) noexcept;
void load_repository_cache(struct Zypp *zypp, const char *alias,
                           struct Status *status) noexcept;