rust/zypp-agama/zypp-agama-sys/c-layer/include/callbacks.h

struct ProgressData {
  long long value;
  const char *name;
};
typedef bool (*ZyppProgressCallback)(struct ProgressData zypp_data,
                                     void *user_data);
void set_zypp_progress_callback(ZyppProgressCallback progress, void *user_data);
typedef void (*ZyppDownloadStartCallback)(const char *url,
                                          const char *localfile,
                                          void *user_data);
typedef bool (*ZyppDownloadProgressCallback)(int value, const char *url,
                                             double bps_avg, double bps_current,
                                             void *user_data);
typedef enum PROBLEM_RESPONSE (*ZyppDownloadProblemCallback)(
    const char *url, enum DownloadProgressError error, const char *description,
    void *user_data);
typedef void (*ZyppDownloadFinishCallback)(const char *url,
                                           enum DownloadProgressError error,
                                           const char *reason, void *user_data);
struct DownloadProgressCallbacks {
  ZyppDownloadStartCallback start;
  void *start_data;
  ZyppDownloadProgressCallback progress;
  void *progress_data;
  ZyppDownloadProblemCallback problem;
  void *problem_data;
  ZyppDownloadFinishCallback finish;
  void *finish_data;
};
typedef void (*ZyppDownloadResolvableStartCallback)(void *user_data);
typedef enum PROBLEM_RESPONSE (*ZyppDownloadResolvableProblemCallback)(
    const char *resolvable_name, enum DownloadResolvableError error,
    const char *description, void *user_data);
typedef enum OPTIONAL_PROBLEM_RESPONSE (
    *ZyppDownloadResolvableGpgCheckCallback)(
    const char *resolvable_name, const char *repo_url,
    enum GPGCheckPackageResult check_result, void *user_data);
typedef void (*ZyppDownloadResolvableFileFinishCallback)(
    const char *url, const char *local_path,
    enum DownloadResolvableFileError error, const char *error_details,
    void *user_data);
struct DownloadResolvableCallbacks {
  ZyppDownloadResolvableStartCallback start_preload;
  void *start_preload_data;
  ZyppDownloadResolvableProblemCallback problem;
  void *problem_data;
  ZyppDownloadResolvableGpgCheckCallback gpg_check;
  void *gpg_check_data;
  ZyppDownloadResolvableFileFinishCallback file_finish;
  void *file_finish_data;
};
typedef enum GPGKeyTrust (*GPGAcceptKeyCallback)(const char *key_id,
                                                 const char *key_name,
                                                 const char *key_fingerprint,
                                                 const char *repository_alias,
                                                 void *user_data);
typedef bool (*GPGUnsignedFile)(const char *file, const char *repository_alias,
                                void *user_data);
typedef bool (*GPGUnknownKey)(const char *file, const char *key_id,
                              const char *repository_alias, void *user_data);
typedef bool (*GPGVerificationFailed)(const char *file, const char *key_id,
                                      const char *key_name,
                                      const char *key_fingerprint,
                                      const char *repository_alias,
                                      void *user_data);
typedef bool (*ChecksumMissing)(const char *file, void *user_data);
typedef bool (*ChecksumWrong)(const char *file, const char *expected,
                              const char *actual, void *user_data);
typedef bool (*ChecksumUnknown)(const char *file, const char *checksum,
                                void *user_data);
struct SecurityCallbacks {
  GPGAcceptKeyCallback accept_key;
  void *accept_key_data;
  GPGUnsignedFile unsigned_file;
  void *unsigned_file_data;
  GPGUnknownKey unknown_key;
  void *unknown_key_data;
  GPGVerificationFailed verification_failed;
  void *verification_failed_data;
  ChecksumMissing checksum_missing;
  void *checksum_missing_data;
  ChecksumWrong checksum_wrong;
  void *checksum_wrong_data;
  ChecksumUnknown checksum_unknown;
  void *checksum_unknown_data;
};
typedef void (*ZyppInstallPackageStartCallback)(const char *package_name,
                                                void *user_data);
typedef enum PROBLEM_RESPONSE (*ZyppInstallPackageProblemCallback)(
    const char *package_name, enum ZyppInstallPackageError error,
    const char *description, void *user_data);
typedef void (*ZyppInstallPackageFinishCallback)(const char *package_name,
                                                 void *user_data);
typedef enum PROBLEM_RESPONSE (*ZyppInstallScriptProblemCallback)(
    const char *description, void *user_data);
struct InstallCallbacks {
  ZyppInstallPackageStartCallback package_start;
  void *package_start_data;
  ZyppInstallPackageProblemCallback package_problem;
  void *package_problem_data;
  ZyppInstallScriptProblemCallback script_problem;
  void *script_problem_data;
  ZyppInstallPackageFinishCallback package_finish;
  void *package_finish_data;
};