rust/zypp-agama/zypp-agama-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of RepositoryList"][::std::mem::size_of::<RepositoryList>() - 16usize];
    ["Alignment of RepositoryList"][::std::mem::align_of::<RepositoryList>() - 8usize];
    ["Offset of field: RepositoryList::size"]
        [::std::mem::offset_of!(RepositoryList, size) - 0usize];
    ["Offset of field: RepositoryList::repos"]
        [::std::mem::offset_of!(RepositoryList, repos) - 8usize];
};
unsafe extern "C" {
    pub fn set_zypp_progress_callback(
        progress: ZyppProgressCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
    pub fn free_status(s: *mut Status);
    #[doc = " Initialize Zypp target (where to store zypp data).\n The returned zypp context is not thread safe and should be protected by a\n mutex in the calling layer.\n @param root\n @param[out] status\n @param progress\n @param user_data\n @return zypp context"]
    pub fn init_target(
        root: *const ::std::os::raw::c_char,
        status: *mut Status,
        progress: ProgressCallback,
        user_data: *mut ::std::os::raw::c_void,
    ) -> *mut Zypp;
    #[doc = " Switch Zypp target (where to install packages to).\n @param root\n @param[out] status"]
    pub fn switch_target(zypp: *mut Zypp, root: *const ::std::os::raw::c_char, status: *mut Status);
    #[doc = " Commit zypp settings and install\n TODO: install callbacks\n @param zypp\n @param status\n @param download_callbacks\n @param security_callbacks\n @return true if there is no error"]
    pub fn commit(
        zypp: *mut Zypp,
        status: *mut Status,
        download_callbacks: *mut DownloadResolvableCallbacks,
        security_callbacks: *mut SecurityCallbacks,
        install_callbacks: *mut InstallCallbacks,
    ) -> bool;
    #[doc = " Calculates the space usage for a given list of mount points.\n This function populates the `used_size` field for each element in the\n provided `mount_points` array.\n\n @param zypp The Zypp context.\n @param[out] status Output status object.\n @param[in,out] mount_points An array of mount points to be evaluated.\n @param mount_points_size The number of elements in the `mount_points` array."]
    pub fn get_space_usage(
        zypp: *mut Zypp,
        status: *mut Status,
        mount_points: *mut MountPoint,
        mount_points_size: ::std::os::raw::c_uint,
    );
    #[doc = " Marks resolvable for installation\n @param zypp see \\ref init_target\n @param name resolvable name\n @param kind kind of resolvable\n @param who who do selection. If NOT_SELECTED is used, it will be empty\n operation.\n @param[out] status (will overwrite existing contents)"]
    pub fn resolvable_select(
        zypp: *mut Zypp,
        name: *const ::std::os::raw::c_char,
        kind: RESOLVABLE_KIND,
        who: RESOLVABLE_SELECTED,
        status: *mut Status,
    );
    #[doc = " Unselect resolvable for installation. It can still be installed as\n dependency.\n @param zypp see \\ref init_target\n @param name resolvable name\n @param kind kind of resolvable\n @param who who do unselection. Only unselect if it is higher or equal level\n then who do the selection.\n @param[out] status (will overwrite existing contents)"]
    pub fn resolvable_unselect(
        zypp: *mut Zypp,
        name: *const ::std::os::raw::c_char,
        kind: RESOLVABLE_KIND,
        who: RESOLVABLE_SELECTED,
        status: *mut Status,
    );
    #[doc = " Reset status of all resolvables, unselects selected packages, patterns...\n Note: this also resets the user locks (\"taboo\" or \"keep installed\")"]
    pub fn resolvable_reset_all(_zypp: *mut Zypp);
    #[doc = " @brief Amount of packages selected for installation\n @param _zypp see \\ref init_target\n @return count of packages"]
    pub fn packages_to_install(_zypp: *mut Zypp) -> ::std::os::raw::c_uint;
    #[doc = " Get Pattern details.\n Unknown patterns are simply omitted from the result. Match by\n PatternInfo.name, not by index."]
    pub fn get_patterns(_zypp: *mut Zypp, status: *mut Status) -> Patterns;
    pub fn free_patterns(patterns: *const Patterns);
    pub fn import_gpg_key(
        zypp: *mut Zypp,
        pathname: *const ::std::os::raw::c_char,
        status: *mut Status,
    );
    #[doc = " check if url has local schema\n @param url url to check\n @param[out] status (will overwrite existing contents)\n @return true if url is local, for invalid url status is set to error"]
    pub fn is_local_url(url: *const ::std::os::raw::c_char, status: *mut Status) -> bool;
    #[doc = " check if package is available\n @param zypp see \\ref init_target\n @param tag package name, provides or file path\n @param[out] status (will overwrite existing contents)\n @return true if package is available. In case of error it fills status and\n return value is undefined"]
    pub fn is_package_available(
        zypp: *mut Zypp,
        tag: *const ::std::os::raw::c_char,
        status: *mut Status,
    ) -> bool;
    #[doc = " check if package is selected for installation\n @param zypp see \\ref init_target\n @param tag package name, provides or file path\n @param[out] status (will overwrite existing contents)\n @return true if package is selected. In case of error it fills status and\n return value is undefined"]
    pub fn is_package_selected(
        zypp: *mut Zypp,
        tag: *const ::std::os::raw::c_char,
        status: *mut Status,
    ) -> bool;
    #[doc = " Runs solver\n @param zypp see \\ref init_target\n @param only_required if true, only required packages are installed (ignoring\n recommended packages)\n @param[out] status (will overwrite existing contents)\n @return true if solver pass and false if it found some dependency issues"]
    pub fn run_solver(zypp: *mut Zypp, only_required: bool, status: *mut Status) -> bool;
    #[doc = " the last call that will free all pointers to zypp holded by agama"]
    pub fn free_zypp(zypp: *mut Zypp);
    #[doc = " repository array in list.\n when no longer needed, use \\ref free_repository_list to release memory\n @param zypp see \\ref init_target\n @param[out] status (will overwrite existing contents)"]
    pub fn list_repositories(zypp: *mut Zypp, status: *mut Status) -> RepositoryList;
    pub fn free_repository_list(repo_list: *mut RepositoryList);
    #[doc = " Adds repository to repo manager\n @param zypp see \\ref init_target\n @param alias have to be unique\n @param url can contain repo variables\n @param[out] status (will overwrite existing contents)\n @param callback pointer to function with callback or NULL\n @param user_data"]
    pub fn add_repository(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        url: *const ::std::os::raw::c_char,
        status: *mut Status,
        callback: ZyppProgressCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
    #[doc = " Disable repository in repo manager\n @param zypp see \\ref init_target\n @param alias identifier of repository"]
    pub fn disable_repository(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        status: *mut Status,
    );
    #[doc = " Changes url of given repository\n @param zypp see \\ref init_target\n @param alias identifier of repository\n @param alias have to be unique"]
    pub fn set_repository_url(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        url: *const ::std::os::raw::c_char,
        status: *mut Status,
    );
    #[doc = " Removes repository from repo manager\n @param zypp see \\ref init_target\n @param alias have to be unique\n @param[out] status (will overwrite existing contents)\n @param callback pointer to function with callback or NULL\n @param user_data"]
    pub fn remove_repository(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        status: *mut Status,
        callback: ZyppProgressCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
    #[doc = " Adds service to repo manager\n @param zypp see \\ref init_target\n @param alias have to be unique\n @param url\n @param[out] status (will overwrite existing contents)"]
    pub fn add_service(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        url: *const ::std::os::raw::c_char,
        status: *mut Status,
    );
    #[doc = "\n @param zypp see \\ref init_target\n @param alias alias of repository to refresh\n @param[out] status (will overwrite existing contents)\n @param progress pointer to struct with callbacks or NULL if no progress is\n needed\n @param security pointer to struct with security callbacks"]
    pub fn refresh_repository(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        status: *mut Status,
        progress: *mut DownloadProgressCallbacks,
        security: *mut SecurityCallbacks,
    );
    #[doc = "\n @param zypp see \\ref init_target\n @param alias alias of service to refresh\n @param[out] status (will overwrite existing contents)"]
    pub fn refresh_service(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        status: *mut Status,
    );
    pub fn build_repository_cache(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        status: *mut Status,
        callback: ZyppProgressCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
    pub fn load_repository_cache(
        zypp: *mut Zypp,
        alias: *const ::std::os::raw::c_char,
        status: *mut Status,
    );
}
